package protocol;

//
// Message containing the DL DCI info
//

message prp_dl_dci {
	optional uint32 rnti = 1;
	optional uint32 res_alloc = 2;		// Type of resource allocation
	optional uint32 rb_bitmap = 3;		// Bitmap for RB allocation
	optional uint32 rb_shift = 4;		// See TS 36.214, section 7.1.6.2
	repeated uint32 tbs_size = 5;		// The size of each TBS
	repeated uint32 mcs = 6;   		// The MCS of each TB
	repeated uint32 ndi = 7;		// New data indicator of each TB
	repeated uint32 rv = 8;			// Redundancy version of each TB
	optional uint32 cce_index = 9;		// CCE index used to send the DCI
	optional uint32 aggr_level = 10;
	optional uint32 precoding_info = 11;	// 2 antenna ports:0..6,
		 			 	// 4 antenna ports:0..50
	optional uint32 format = 12;		// DCI format. A PRDCIF_* value
	optional uint32 tpc = 13;		// TS 36.213, sec 5.1.1.1
	optional uint32 harq_process = 14; 	// HARQ process ID
	optional uint32 dai = 15;      		// TDD only
	optional uint32 vrb_format = 16; 	// One of the PRVRBF_* values
	optional uint32 tb_swap = 17;	 	// Boolean. TB to codeword swap flag
	optional uint32 sps_release = 18;   	// Flag value
	optional uint32 pdcch_order = 19;
	optional uint32 preamble_index = 20;	// Only valid if pdcch_order = 1
	optional uint32 prach_mask_index = 21;	// Only valid if pdcch_order = 1
	optional uint32 n_gap = 22;	   	// One of the PRNGV_* values
	optional uint32 tbs_idx = 23;		// The TBS index for Format 1A
	optional uint32 dl_power_offset = 24;	// For format 1D
	optional uint32 pdcch_power_offset = 25; // DL PDCCH power boosting in dB
	optional uint32 cif_present = 26;    	// Boolean. Indication of CIF field
	optional uint32 cif = 27;     		// CIF for cross-carrier scheduling
}

//
// Messages related to the creation of RLC PDUs
//

message prp_rlc_pdu {
	repeated prp_rlc_pdu_tb rlc_pdu_tb = 1; // list of parameters for the creation of RLC PDUs. One for each TB
}

message prp_rlc_pdu_tb {
	optional uint32 logical_channel_id = 1;
	optional uint32 size = 2;	   // Maximum RLC PDU to be created in bytes
}

//
// MAC content types related enums
//

enum prp_dci_format {
     PRDCIF_1 = 0;
     PRDCIF_1A = 1;
     PRDCIF_1B = 2;
     PRDCIF_1C = 3;
     PRDCIF_1D = 4;
     PRDCIF_2 = 5;
     PRDCIF_2A = 6;
     PRDCIF_2B = 7;
     PRDCIF_3 = 8;
     PRDCIF_3A = 9;
}

enum prp_vrb_format {
     PRVRBF_LOCALIZED = 0;
     PRVRBF_DISTRIBUTED = 1;
}

enum prp_ngap_val {
     PRNGV_1 = 0;
     PRNGV_2 = 1;
}